positioning complete, adding color. One issue the page is not responsive

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ h1{
    position: relative;
    width: 100%;
    height: 100vh;
-   margin: auto;
+   margin-top: 5%;
    border-radius: 51%;
 }
 
@@ -34,7 +34,8 @@ h1{
     border-radius: 50%;
     transform: rotate(46deg) translate(251px);
     position: absolute;
-    left: 55%;
+    top: -30px;
+    left: 60%;
     margin: -51px;
 }
 
@@ -57,6 +58,10 @@ h1{
     border-right: 100px solid transparent;
     border-bottom: 200px solid rgba(244, 35, 123, .6);
     transform: rotate(136deg) translate(250px) rotate(-136deg);
+    position: absolute;
+    top: 57%;
+    left: 82%;
+    margin: -51px;
 }
 
 .hsl{
@@ -66,6 +71,10 @@ h1{
     height: 0;
     width: 200px;
     transform: rotate(181deg) translate(250px) rotate(-181deg);
+    position: absolute;
+    top: 80%;
+    left: 35%;
+    margin: -51px;
 }
 
 .hsla{
@@ -79,6 +88,9 @@ h1{
     border-bottom: 70px solid hsla(170, 75%, 25%, .7);
     border-left: 100px solid transparent;
     transform: rotate(35deg);
+    top: 45%;
+    left: 5%;
+    margin: -51px;
 }
 
 .hsla::before{
@@ -116,6 +128,9 @@ h1{
     width: 212px;
     height: 100px;
     box-sizing: content-box;
+    top: 10%;
+    left: 20%;
+    margin: -51px;
 }
 
 .cross-brows::before, .cross-brows::after{
